tests/invalid/loops/empty_clause.rs
/*
fail: 1
*/

main(): i32 {
    for (i: i64 = 2; ))
        a: i64 = 0;
}